@@ -74,6 +74,14 @@ public final class PageBlobUploadPagesFromURLHeaders {
     private DateTimeRfc1123 date;
 
     /**
+     * The value of this header is set to true if the contents of the request
+     * are successfully encrypted using the specified algorithm, and false
+     * otherwise.
+     */
+    @JsonProperty(value = "x-ms-request-server-encrypted")
+    private Boolean isServerEncrypted;
+
+    /**
      * Get the eTag value.
      *
      * @return the eTag value.
@@ -224,6 +232,26 @@ public final class PageBlobUploadPagesFromURLHeaders {
         } else {
             this.date = new DateTimeRfc1123(date);
         }
+        return this;
+    }
+
+    /**
+     * Get the isServerEncrypted value.
+     *
+     * @return the isServerEncrypted value.
+     */
+    public Boolean isServerEncrypted() {
+        return this.isServerEncrypted;
+    }
+
+    /**
+     * Set the isServerEncrypted value.
+     *
+     * @param isServerEncrypted the isServerEncrypted value to set.
+     * @return the PageBlobUploadPagesFromURLHeaders object itself.
+     */
+    public PageBlobUploadPagesFromURLHeaders withIsServerEncrypted(Boolean isServerEncrypted) {
+        this.isServerEncrypted = isServerEncrypted;
         return this;
     }
 }
