@@ -9,7 +9,7 @@ namespace: com.microsoft.azure.storage.blob
 license-header: MICROSOFT_MIT_NO_VERSION
 output-folder: ../
 input-file:
-- C:\Users\frley\Desktop\temp\putFromURL.json
+- path\to\json
 directive:
   # removes the x-ms-error-code from default response headers
   where: $..default.headers["x-ms-error-code"]
